# MLOps

./: .flake8  .gitignore  DEVELOPMENT.md  Makefile  PROJECT_STRUCTURE.md  README.md  REVIEW.md  architecture_design.md  implementation_design.md  implementation_guide.md  mcp_design.md  mcp_extended_design.md  mlops_workflow.md  pyproject.toml  pytest.ini  requirements.txt  requirements_specification.md  setup_dev.sh  system_specification.md  test_design.md
mcp_server/: Dockerfile  README.md  __init__.py  __main__.py  config.py  pyproject.toml  requirements.txt  router.py  server.py
mcp_server/capabilities/: __init__.py  base.py
mcp_server/capabilities/data_preparation/: __init__.py  capability.py
mcp_server/capabilities/github_integration/: capability.py
mcp_server/capabilities/history_management/: __init__.py  capability.py
mcp_server/capabilities/ml_evaluation/: capability.py
mcp_server/capabilities/ml_training/: capability.py
mcp_server/capabilities/ml_training/tools/: __init__.py  (+3 more)
mcp_server/capabilities/model_deployment/: __init__.py  capability.py
mcp_server/capabilities/model_monitoring/: __init__.py  capability.py
mcp_server/capabilities/model_packaging/: __init__.py  capability.py
mcp_server/capabilities/model_registry/: capability.py
mcp_server/capabilities/notification/: capability.py
mcp_server/capabilities/retrain_management/: __init__.py  capability.py
mcp_server/capabilities/workflow_optimization/: __init__.py  capability.py
mcp_server/common/: __init__.py  config.py  exceptions.py  logger.py  metrics.py  s3_utils.py  secrets.py
(+90 files in other folders)
