[project]
name = "unified-mlops-mcp-server"
version = "0.1.0"
description = "Unified MLOps MCP Server with 6 Capabilities"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "pandas>=2.1.0",
    "PyGithub>=2.1.1",
    "slack-sdk>=3.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
